--- a/football/39/2022/Regular Season - 7.json
+++ b/football/39/2022/Regular Season - 7.json
@@ -26,7 +26,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-2.api-sports.io/football/leagues/39.png",
-            "flag": "https://media.api-sports.io/flags/gb.svg",
+            "flag": "https://media-2.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 7"
         },
@@ -34,7 +34,7 @@
             "home": {
                 "id": 35,
                 "name": "Bournemouth",
-                "logo": "https://media-2.api-sports.io/football/teams/35.png",
+                "logo": "https://media-1.api-sports.io/football/teams/35.png",
                 "winner": null
             },
             "away": {
@@ -94,7 +94,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-2.api-sports.io/football/leagues/39.png",
-            "flag": "https://media.api-sports.io/flags/gb.svg",
+            "flag": "https://media-2.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 7"
         },
@@ -102,13 +102,13 @@
             "home": {
                 "id": 42,
                 "name": "Arsenal",
-                "logo": "https://media-1.api-sports.io/football/teams/42.png",
+                "logo": "https://media-2.api-sports.io/football/teams/42.png",
                 "winner": null
             },
             "away": {
                 "id": 45,
                 "name": "Everton",
-                "logo": "https://media-1.api-sports.io/football/teams/45.png",
+                "logo": "https://media-2.api-sports.io/football/teams/45.png",
                 "winner": null
             }
         },
@@ -162,7 +162,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-2.api-sports.io/football/leagues/39.png",
-            "flag": "https://media.api-sports.io/flags/gb.svg",
+            "flag": "https://media-2.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 7"
         },
@@ -170,7 +170,7 @@
             "home": {
                 "id": 52,
                 "name": "Crystal Palace",
-                "logo": "https://media.api-sports.io/football/teams/52.png",
+                "logo": "https://media-2.api-sports.io/football/teams/52.png",
                 "winner": null
             },
             "away": {
@@ -230,7 +230,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-2.api-sports.io/football/leagues/39.png",
-            "flag": "https://media.api-sports.io/flags/gb.svg",
+            "flag": "https://media-2.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 7"
         },
@@ -298,7 +298,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-2.api-sports.io/football/leagues/39.png",
-            "flag": "https://media.api-sports.io/flags/gb.svg",
+            "flag": "https://media-2.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 7"
         },
@@ -306,13 +306,13 @@
             "home": {
                 "id": 63,
                 "name": "Leeds",
-                "logo": "https://media-1.api-sports.io/football/teams/63.png",
+                "logo": "https://media-2.api-sports.io/football/teams/63.png",
                 "winner": null
             },
             "away": {
                 "id": 65,
                 "name": "Nottingham Forest",
-                "logo": "https://media.api-sports.io/football/teams/65.png",
+                "logo": "https://media-2.api-sports.io/football/teams/65.png",
                 "winner": null
             }
         },
@@ -366,7 +366,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-2.api-sports.io/football/leagues/39.png",
-            "flag": "https://media.api-sports.io/flags/gb.svg",
+            "flag": "https://media-2.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 7"
         },
@@ -374,13 +374,13 @@
             "home": {
                 "id": 46,
                 "name": "Leicester",
-                "logo": "https://media-2.api-sports.io/football/teams/46.png",
+                "logo": "https://media.api-sports.io/football/teams/46.png",
                 "winner": null
             },
             "away": {
                 "id": 66,
                 "name": "Aston Villa",
-                "logo": "https://media-1.api-sports.io/football/teams/66.png",
+                "logo": "https://media-2.api-sports.io/football/teams/66.png",
                 "winner": null
             }
         },
@@ -434,7 +434,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-2.api-sports.io/football/leagues/39.png",
-            "flag": "https://media.api-sports.io/flags/gb.svg",
+            "flag": "https://media-2.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 7"
         },
@@ -442,7 +442,7 @@
             "home": {
                 "id": 40,
                 "name": "Liverpool",
-                "logo": "https://media.api-sports.io/football/teams/40.png",
+                "logo": "https://media-1.api-sports.io/football/teams/40.png",
                 "winner": null
             },
             "away": {
@@ -502,7 +502,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-2.api-sports.io/football/leagues/39.png",
-            "flag": "https://media.api-sports.io/flags/gb.svg",
+            "flag": "https://media-2.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 7"
         },
@@ -510,7 +510,7 @@
             "home": {
                 "id": 50,
                 "name": "Manchester City",
-                "logo": "https://media-1.api-sports.io/football/teams/50.png",
+                "logo": "https://media-2.api-sports.io/football/teams/50.png",
                 "winner": null
             },
             "away": {
@@ -570,7 +570,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-2.api-sports.io/football/leagues/39.png",
-            "flag": "https://media.api-sports.io/flags/gb.svg",
+            "flag": "https://media-2.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 7"
         },
@@ -578,7 +578,7 @@
             "home": {
                 "id": 41,
                 "name": "Southampton",
-                "logo": "https://media-1.api-sports.io/football/teams/41.png",
+                "logo": "https://media-2.api-sports.io/football/teams/41.png",
                 "winner": null
             },
             "away": {
@@ -638,7 +638,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-2.api-sports.io/football/leagues/39.png",
-            "flag": "https://media.api-sports.io/flags/gb.svg",
+            "flag": "https://media-2.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 7"
         },
@@ -646,7 +646,7 @@
             "home": {
                 "id": 48,
                 "name": "West Ham",
-                "logo": "https://media-2.api-sports.io/football/teams/48.png",
+                "logo": "https://media-1.api-sports.io/football/teams/48.png",
                 "winner": null
             },
             "away": {
